[package]
name = "tiny54"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = { version = "3", default-features = false, features = ["native-tls"] }
roxmltree = { version = "0.21", default-features = false, features = ["std"] }
sha2 = "0.11"
hmac = "0.13"
native-tls = { version = "0.2", default-features = false }
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
